istio-gateway-vs.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: devsecops-gateway
  namespace: prod
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: devsecops-numeric
  namespace: prod
spec:
  hosts:
  - "*"
  gateways:
  - devsecops-gateway
  http:
  - match:
    - uri:
        prefix: /increment
    - uri:
        exact: /
    route:
    - destination:
        port:
          number: 8080
        host: devsecops-svc
